--- a/mall-admin/pom.xml
+++ b/mall-admin/pom.xml
@@ -6,9 +6,9 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.2.4.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/> <!--lookup parent from repository-->
     </parent>
-    <groupId>com.macro.mall.tiny</groupId>
+    <groupId>com.macro.mall</groupId>
     <artifactId>mall-admin</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
@@ -38,7 +38,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.macro.mall.tiny</groupId>
+            <groupId>com.macro.mall</groupId>
             <artifactId>mall-model</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
