--- a/mall-model/pom.xml
+++ b/mall-model/pom.xml
@@ -6,9 +6,9 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.2.4.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
-    <groupId>com.macro.mall.tiny</groupId>
+    <groupId>com.macro.mall</groupId>
     <artifactId>mall-model</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>mall-model</name>
@@ -18,6 +18,7 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+        <!--java工具类-->
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
@@ -62,10 +63,10 @@
 
     <build>
         <plugins>
-            <plugin>
+            <!--<plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+            </plugin>-->
             <!--配置mybatis逆向工程-->
                    <!--<plugin>
                            <groupId>org.mybatis.generator</groupId>
