--- a/mall-admin/src/main/resources/application.yml
+++ b/mall-admin/src/main/resources/application.yml
@@ -7,6 +7,10 @@ spring:
       initial-size: 5 #连接池初始化大小
       min-idle: 10 #最小空闲连接数
       max-active: 20 #最大连接数
+  #redis:
+    #sentinel: #集群 配置哨兵 一般默认是mymaster名字
+      #master: mymaster  #哨兵是多个所以配置多个 三个哨兵的ip和端口 (连接哨兵然后哨兵连接redis)
+      #nodes: 192.168.92.128:26380,192.168.92.128:26381,192.168.92.128:26382
 
 mybatis:
   mapper-locations:
@@ -18,6 +22,9 @@ jwt:
   secret: secrt #JWT加解密使用的密钥
   expiration: 3600 #JWT的超期限时间秒(60分钟)
   tokenHead: tokenHead  #JWT负载中拿到开头
+
+#redis:
+  #redisTime: 60 #redis设置缓存时间 为10秒
 
 secure:
   ignored:
@@ -48,6 +55,7 @@ aliyun:
     callback: http://localhost:8080/aliyun/oss/callback # 文件上传成功后的回调地址
     dir:
       prefix: images/ # 上传文件夹路径前缀
+
 
 logging:
   level:
